# Hyper-DERP

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeCrossCompile-aarch64.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  OPERATIONS.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  cross-compile.yml  pages.yml  release.yml
bare-metal/: SETUP.md  TEST_PLAN.md  TUNNEL_TEST_PLAN.md
bench_results/: lat_1024B_v2.json  lat_64B.json  p1024_flood.json  p1024_sink.json  p8192_sink.json  pinned_1024B_flood.json  pinned_256B_flood.json  pinned_256B_sink.json  pinned_4096B_flood.json  pinned_64B_sink.json  pinned_8192B_flood.json  test_sink.json  tp_1024B_recv.json  tp_1024B_send.json  tp_1024B_v2_recv.json  tp_1024B_v2_send.json  tp_256B_recv.json  tp_256B_v2_recv.json  tp_256B_v2_send.json  tp_4096B_send.json  tp_64B_recv.json  tp_64B_v2_recv.json  tp_64B_v2_send.json  tp_8192B_recv.json  tp_8192B_v2_recv.json
bench_results/archive/: flood_1024B_pinned.json  lat_1024B.json  lat_256B.json  lat_256B_v2.json  lat_64B_v2.json  p4096_flood.json  p4096_sink.json  p64_flood.json  p64_sink.json  p8192_flood.json  pinned_1024B_sink.json  pinned_4096B_sink.json  pinned_64B_flood.json  pinned_8192B_sink.json  sink_1024B_pinned.json  tp_256B_send.json  tp_4096B_recv.json  tp_4096B_v2_recv.json  tp_4096B_v2_send.json  tp_64B_send.json  tp_8192B_send.json  tp_8192B_v2_send.json
bench_results/aws-c7i-phase-b/: REPORT.md  gen_report.py
bench_results/comparison-20260311/: COMPARISON.md  hd_lat_1024B.json  hd_tp_1024B_flood.json  hd_tp_1024B_sink.json  hd_tp_128B_flood.json  hd_tp_128B_sink.json  hd_tp_1400B_sink.json  hd_tp_256B_sink.json  hd_tp_512B_flood.json  (+21 more)
bpf/: hd_af_xdp.bpf.c  hd_xdp.bpf.c  wg_relay.bpf.c
client/: CMakeLists.txt  hd_wg.cc  hdctl.cc  wg_config.cc  wg_config.h  wg_netlink.cc  wg_peer.cc  wg_proxy.cc  wg_proxy.h
cmake/: aarch64-toolchain.cmake  bpf.cmake  libderp.cmake
docs/: 001_cpp_modernization.md  architecture.md  benchmarks.md  building.md  cli_handbook.md  configuration.md  hd_perf_analysis.md  hd_wg.md  hdwg.md  mesh_routing.md  packaging.md  routing_policy.md  sdk.md  wireguard_mode.md  wireguard_quickstart.md  wireguard_relay_bench.md  wireguard_relay_bench_25g.md  wireguard_relay_bench_gcp.md  wireguard_relay_quickstart.md
fuzz/: CMakeLists.txt
graphics/: colors.md
scripts/: autotest.sh  format.sh  lint.sh  tune_system.sh
sdk/: CMakeLists.txt  hd_sdk.cc  hd_sdk.h
sdk/bindings/c/: hd_sdk_c.cc  hd_sdk_c.h
sdk/examples/: simple_tunnel.cc
sdk/include/hd/: sdk.hpp
sdk/include/hd/bridge/: bridge.h
sdk/include/hd/fleet/: fleet_view.h
sdk/include/hd/ice/: ice_agent.h
sdk/include/hd/policy/: policy.h
sdk/include/hd/sdk/: client.h  config.h  error.h  frame_pool.h  peer_info.h  tunnel.h
sdk/include/hd/wg/: wg_config.h  wg_netlink.h  wg_peer.h  wg_proxy.h
sdk/libs/hd_bridge/: bridge.cc
sdk/libs/hd_fleet/: fleet_view.cc
sdk/libs/hd_ice/: ice_agent.cc
sdk/libs/hd_wg/: wg_config.cc  wg_netlink.cc  wg_peer.cc  wg_proxy.cc
sdk/src/: client.cc  frame_pool.cc  internal.h  tunnel.cc
sdk/tools/hdcat/: hdcat.cc
sdk/tools/hdctl/: hdctl_bridge.cc
site/: docusaurus.config.ts  gen_bench_plots.py  hugo.toml  package-lock.json  package.json  sidebars.ts  sidebarsBenchmarks.ts
src/: bench.cc  client.cc  config.cc  control_plane.cc  ctl_channel.cc  data_plane.cc  einheit_channel.cc  einheit_protocol.cc  fleet_controller.cc  handshake.cc  hd_audit.cc  hd_bridge.cc  hd_client.cc  hd_handshake.cc  hd_peers.cc  hd_protocol.cc  hd_relay_table.cc  hd_resolver.cc  http.cc  ice.cc  key_format.cc  ktls.cc  main.cc  metrics.cc  protocol.cc  server.cc  stun.cc  tun.cc  turn.cc  wg_relay.cc  xdp_loader.cc
test-design/: AWS_SWEEP_PLAN.md  FULL_SWEEP_DESIGN.md  OPTIMIZATION_PLAN.md  PHASE_B_PLAN.md  RELEASE_PLAN.md  TUNNEL_PHASE0_RESULTS.md  TUNNEL_PHASE1_RESULTS.md  TUNNEL_TEST_DESIGN.md  TUNNEL_TEST_RESULTS.md  TUNNEL_WRITEUP.md  WORKER_SCALING_DESIGN.md
test-infra/: derp-map.yaml  headscale-config.yaml  setup-tailscale-test.sh
tests/: CMakeLists.txt  harness.cc  harness.h  test_bench.cc  test_control_plane.cc  test_ctl_channel.cc  test_e2e.cc  test_einheit_channel.cc  test_einheit_protocol.cc  test_fleet_controller.cc  test_fleet_routing.cc  test_frame_pool.cc  test_handshake.cc  test_hd_audit.cc  test_hd_blake2s.cc  test_hd_bridge.cc  test_hd_e2e.cc  test_hd_handshake.cc  test_hd_peerinfo.cc  test_hd_peers.cc  test_hd_protocol.cc  test_hd_reconnect.cc  test_hd_resolver.cc  test_hd_sdk.cc  test_http.cc  test_ice.cc  test_ice_agent.cc  test_key_format.cc  test_ktls.cc  test_level2.cc  test_mesh_routing.cc  test_open_conn.cc  test_policy.cc  test_production.cc  test_protocol.cc  test_stun.cc  test_tun.cc  test_turn.cc  test_types.cc  test_wg_config.cc  (+4 more)
tests/fuzz/: fuzz_http.cc  fuzz_protocol.cc
tests/integration/: hd_wg_e2e.sh  wg_relay_fleet.sh
tools/: CMakeLists.txt  SCALING_COMPARISON.md  bench_bare_metal.sh  bench_hd_vs_derp.sh  derp_scale_test.cc  derp_scale_test_uring.cc  derp_test_client.cc  derp_tun_proxy.cc  diag_50g.sh  gen_comparison_report.py  gen_phase_b_report.py  gen_scaling_report.py  phase_b_aws.sh  phase_b_gcp.sh  run_bare_metal.sh  run_bare_metal_swapped.sh  run_bare_metal_test.sh  run_bench.sh  run_derp_comparison.sh  run_diag_cpu.sh  run_full_config.sh  run_full_sweep.sh  run_haswell_perf.sh  run_haswell_remaining.sh  run_ktls_comparison.sh  run_ktls_rerun.sh  run_p3_validation.sh  run_phase_b.sh  run_remote_sweep.sh  run_scale_compare.sh  run_scaling_sweep.sh  run_tap_test.sh  run_ts_tls.sh  run_tunnel_test.sh  run_vm_comparison.sh  run_worker_scaling.sh  run_worker_sweep.sh  test_hd_vm.sh  tunnel_longrun.sh  tunnel_phase0.sh  (+5 more)
tools/bench/: CMakeLists.txt  af_xdp_relay.cc  derp_scale_test.cc  derp_scale_test_uring.cc  derp_test_client.cc  derp_tun_proxy.cc  hd_scale_test.cc  hd_scale_test_uring.cc  hd_test_client.cc  udp_blaster.cc
(+10548 files in other folders)
